changed result files

--- a/3_Form_F.html
+++ b/3_Form_F.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="3a_result.html" method="GET">
+    <form action="3_result_F.html" method="GET">
         <h3>Shady Grove Adventist</h3>
          <h4>Patient Registeration Form</h4>
         <div>
