--- a/3_Form_T.html
+++ b/3_Form_T.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+    <form action="3_result_T.html" method="GET">
    <div>
    <table align="center">
        <caption>Patient Registeration</caption>
@@ -90,5 +90,6 @@
     </tr>
     </div>
    </table>
+    </form>
 </body>
 </html>
