--- a/3_result_T.html
+++ b/3_result_T.html
@@ -9,6 +9,6 @@
 <body>
     <h>Registeration complete!</h>
     <div id="results"></div>
- <a href="/3_Form.html">Back to Form</a>
+ <a href="/3_Form_T.html">Back to Form</a>
 </body>
 </html>
